fix posts routes to add new post to homepage

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with scope: :posts, local: true do |form| %>
+<%= form_for @post do |form| %>
   <p>
     <%= form.label :caption %><br>
     <%= form.text_field :caption %>
@@ -10,6 +10,6 @@
   </p>
 
   <p>
-    <%= form.submit %>
+    <%= form.submit "Submit" %>
   </p>
 <% end %>
