add edit and delete functions

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,11 @@
 <% @posts.each do |post| %>
   <p><%= post.caption %></p>
   <p><%= post.image %></p>
+  <p><%= link_to "delete", post, method: :delete,
+    data: { confirm: "You sure?" } %>&nbsp;&nbsp;
+    <%= link_to "edit", edit_post_path(post) %>
 <% end %>
+<br><br>
 
 <%= link_to new_post_path do %>
   New post
