--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,14 +1,66 @@
 body {
   text-align: center;
-  padding-top: 50px;
+  padding: 50px 0px 50px 0px;
+  background-color: rgb(250, 250, 250);
+  font-family: 'Heebo', sans-serif;
 }
 
 h1 {
   font-family: 'Grand Hotel', cursive;
   font-weight: lighter;
-  font-size: 50px;
+  font-size: 55px;
+  margin: 0px;
+  padding-top: 15px;
 }
 
 #intro {
   font-family: 'Heebo', sans-serif;
+  font-weight: 550;
+  color: rgb(153, 153, 153);
+  font-size: 1.05em;
+  letter-spacing: 0.01em;
+  padding: 0px 10px 0px 10px;
+}
+
+#disclaimer {
+  font-family: 'Heebo', sans-serif;
+  font-weight: lighter;
+  font-size: 0.8em;
+  padding: 0px 30px 0px 30px;
+}
+
+.sign-up {
+  margin: 10px 230px 10px 230px;
+  padding: 15px 30px 15px 30px;
+  background-color: white;
+  border: 2px solid black;
+  border-color: rgb(230, 230, 230);
+}
+
+.login {
+  margin: 10px 230px 10px 230px;
+  padding: 10px 30px 10px 30px;
+  background-color: white;
+  border: 2px solid black;
+  border-color: rgb(230, 230, 230);
+  font-size: 0.9em;
+  color: rgb(37, 37, 37);
+}
+
+.textbox-style {
+  padding: 10px;
+  width: 220px;
+  border: 1px solid black;
+  border-color: rgb(230, 230, 230);
+  background-color: rgb(250, 250, 250);
+}
+
+.button {
+  padding: 8px;
+  width: 240px;
+  border-radius: 7px;
+  background-color: rgb(56, 151, 240);
+  color: white;
+  font-weight: 500;
+  font-size: 0.8em;
 }
