--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,6 +3,7 @@ body {
   padding: 50px 0px 50px 0px;
   background-color: rgb(250, 250, 250);
   font-family: 'Heebo', sans-serif;
+  margin: 0px 250px 0px 250px;
 }
 
 h1 {
@@ -13,6 +14,12 @@ h1 {
   padding-top: 15px;
 }
 
+img {
+  float: left;
+  width: 420px;
+  height: auto;
+  padding-top: 50px;
+}
 #intro {
   font-family: 'Heebo', sans-serif;
   font-weight: 550;
@@ -30,15 +37,15 @@ h1 {
 }
 
 .sign-up {
-  margin: 10px 230px 10px 230px;
+  margin: 10px 0px 10px 420px;
   padding: 15px 30px 15px 30px;
   background-color: white;
   border: 2px solid black;
   border-color: rgb(230, 230, 230);
 }
 
-.login {
-  margin: 10px 230px 10px 230px;
+.login-link {
+  margin: 10px 0px 10px 420px;
   padding: 10px 30px 10px 30px;
   background-color: white;
   border: 2px solid black;
