--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,10 @@
 </head>
 
 <body>
+  <div class="image">
+    <%=image_tag("simulator.jpg", alt: "Example Image")%>
+  </div>
+
   <div class="sign-up">
   <h1>Instagram</h1>
   <p id="intro">Sign up to see photos and videos from your friends</p>
@@ -30,7 +34,7 @@
 <% end %>
 </div>
 
-<div class="login">
+<div class="login-link">
   <p>Have an account?<%= link_to users_path do %>
     Log in
   <% end %></p>
