--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
   Heebo&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="homepage">
   <div class="image">
     <%=image_tag("simulator.jpg", alt: "Example Image")%>
   </div>
