attempt to add image to posts table

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,10 +4,10 @@
     <%= form.text_field :caption %>
   </p>
 
-  <p>
+  <!-- <p>
     <%= form.label :image %><br>
-    <%= form.text_area :image %>
-  </p>
+    <%= form.file_field :image %>
+  </p> -->
 
   <p>
     <%= form.submit "Submit" %>
