--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,19 @@
-<% @posts.each do |post| %>
-  <p><%= post.caption %></p>
-  <p><%= post.image %></p>
-  <p><%= link_to "delete", post, method: :delete,
-    data: { confirm: "You sure?" } %>&nbsp;&nbsp;
-    <%= link_to "edit", edit_post_path(post) %>
-<% end %>
-<br><br>
+<head>
 
-<%= link_to new_post_path do %>
-  New post
-<% end %>
+</head>
+<body>
+  <h1>Instagram</h1>
+  <% @posts.each do |post| %>
+    <p><%= image_tag post.image.url(:medium) %></p>
+    <p><%= post.caption %></p>
+    <br><br>
+    <p><%= link_to "delete", post, method: :delete,
+      data: { confirm: "You sure?" } %>&nbsp;&nbsp;
+      <%= link_to "edit", edit_post_path(post) %>
+  <% end %>
+  <br><br>
+
+  <%= link_to new_post_path do %>
+    New post
+  <% end %>
+</body>
