--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,9 +4,9 @@
 </head>
 
 <body class="homepage">
-  <div class="image">
-    <%=image_tag("simulator.jpg", alt: "Example Image")%>
-  </div>
+  <!-- <div>
+    <%=image_tag("simulator.jpg", alt: "Example Image", class:"image")%>
+  </div> -->
 
   <div class="sign-up">
   <h1>Instagram</h1>
