--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.post-display {
+  text-align: center;
+  padding: 0px 120px 0px 120px;
+  margin: 0px 160px 0px 160px;
+  display: inline-grid;
+}
+
+img {
+  padding: 10px 50px 0px 50px;
+}
