show posts in reverse order

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,8 +1,10 @@
 .post-display {
   text-align: center;
   padding: 0px 120px 0px 120px;
-  margin: 0px 160px 0px 160px;
+  margin: 0px 150px 0px 150px;
   display: inline-grid;
+  background-color: rgb(250, 250, 250);
+  font-family: 'Heebo', sans-serif;
 }
 
 img {
